istio/test-deploymen-nginx-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-v2
  namespace: test-namespace
  labels:
    app: test
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
        version: v2
    spec:
      containers:
      - name: web
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        readinessProbe:
          httpGet:
            path: /
            port: 80
